# FoundrAI

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: Pasted-Build-the-FoundrAI-Results-Dashboard-Page-IMPORTANT-Do-_1783168997419.txt  Pasted-Build-the-FoundrAI-Startup-Analysis-Input-Page-IMPORTAN_1783167670560.txt  Pasted-Connect-the-FoundrAI-frontend-to-the-working-FastAPI-ba_1783175495162.txt  Pasted-FOURTH-TASK-Redesign-the-FoundrAI-Analyze-Page-into-a-p_1783219576904.txt  Pasted-Fix-all-layout-and-spacing-issues-on-FoundrAI-Results-p_1783226929513.txt  Pasted-I-want-to-completely-upgrade-the-FoundrAI-Results-page-_1783223920741.txt  Pasted-I-want-to-improve-FoundrAI-UI-UX-significantly-We-will-_1783216522341.txt  Pasted-I-want-to-replace-the-simple-auth-page-with-real-demo-a_1783216968861.txt  Pasted-I-want-to-upgrade-the-FoundrAI-Results-page-from-excell_1783226153551.txt  Pasted-Implement-the-async-job-polling-fix-for-FoundrAI-IMPORT_1783176110911.txt  Pasted-Phase-2-is-working-successfully-FoundrAI-backend-curren_1783174661652.txt  Pasted-Phase-3-is-working-successfully-FoundrAI-backend-curren_1783174844393.txt  Pasted-THIRD-TASK-Polish-and-upgrade-the-FoundrAI-Authenticati_1783217409095.txt  Pasted-The-FoundrAI-landing-page-is-already-good-but-I-want-to_1783167239787.txt  Pasted-Update-the-FoundrAI-frontend-to-integrate-directly-with_1783187661533.txt  Pasted-We-are-building-a-premium-hackathon-winning-full-stack-_1783166186239.txt  Pasted-We-are-building-the-backend-for-FoundrAI-PROJECT-OVERVI_1783173824448.txt  (+2 more)
(+48 files in other folders)
