[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.6.1",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
]
